--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
   
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>    <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
     <tag>HEAD</tag>
   </scm>
   
@@ -25,6 +26,10 @@
     <developer>
       <id>ikedam</id>
       <name>IKEDA Yasuyuki</name>
+    </developer>
+    <developer>
+      <id>hewhowas</id>
+      <name>Ben Bettridge</name>
     </developer>
   </developers>
   
